--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+:root {
+  --color-black: #000;
+  --color-white: #fff;
+  --color-accent: #03045e;
+  --color-bg: #caf0f8;
+  --color-bg-darker: #ade8f4;
+  --color-bg-sidebar: #fff;
+  --color-bg-nav-hover: #e8f8fb;
+  --color-bg-actived: #023e8a;
+  --color-border: #03045e;
+  --color-text: #03045e;
+  --color-text-actived: #fff;
+  --color-text-hover: #0096c7;
+  --color-badge: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html.dark {
+  --color-accent: #495057;
+  --color-bg: #212529;
+  --color-bg-darker: #495057;
+  --color-bg-sidebar: #343a40;
+  --color-bg-nav-hover: #222;
+  --color-bg-actived: #495057;
+  --color-border: #f8f9fa;
+  --color-text: #dee2e6;
+  --color-text-actived: #fff;
+  --color-text-hover: #adb5bd;
+  --color-badge: #495057;
 }
