--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 :root {
   --color-black: #000;
   --color-white: #fff;
