--- a/src/component/Modal.module.css
+++ b/src/component/Modal.module.css
@@ -3,19 +3,22 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 .wrapper {
+  padding: 10%;
   color: white;
 
-  background-color: var(--color-modal);
+  background-color: rgba(255, 255, 255, 0.1); /* 약간 투명한 배경색 추가 */
+  backdrop-filter: blur(10px);
+
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80vw;
-  height: 60vh;
+  transform: translate(-50%, -100%);
+  width: 50%;
+  height: 30%;
   overflow-y: auto;
 }
 
@@ -25,12 +28,28 @@
   justify-content: space-around;
   align-items: center;
   text-align: center;
+  border-radius: 10px;
 }
 
+.wrapper > nav {
+  font-size: 1.3rem;
+}
+
+.modalImg,
+.modalScript {
+  margin-top: 15%;
+  margin-bottom: 13%;
+}
 .footer {
-  position: absolute;
-  top: 73%;
-  left: 70%;
+  animation: blink 0.9s infinite ease alternate;
+}
+@keyframes blink {
+  0% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.3;
+  }
 }
 
 .modalImg {
