--- a/src/component/Firstload.module.css
+++ b/src/component/Firstload.module.css
@@ -1,26 +1,33 @@
-body {
-  background-color: #282828;
-}
-
 .main_container {
   position: relative;
   text-align: center;
 
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: var(--color-background);
 }
 
 .footer {
   position: absolute;
-  top: 75vh;
-  left: 50vw;
+  top: 50%;
+  left: 50%;
   /* top: 50%;
   left: 50%; */
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 250%);
 
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+  animation: blink 0.9s infinite ease alternate;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0.3;
+  }
 }
