--- a/src/component/LoadModal.module.css
+++ b/src/component/LoadModal.module.css
@@ -8,10 +8,66 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
-.loader > div {
-  font-size: 2rem;
-  color: white;
+
+.iconWrapper {
+  position: relative;
+  max-height: 200px;
+  max-width: 200px;
+}
+
+.lunar {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -55%);
+  animation: spin 3s infinite;
+}
+
+@keyframes spin {
+  0%,
+  100% {
+    transform: translate(-50%, -55%) rotate(-10deg);
+  }
+  50% {
+    transform: translate(-50%, -55%) rotate(10deg);
+  }
+}
+.cloud {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-40%, -15%);
+  /* animation: float 1.2s ease-in infinite; */
+  animation: bounce 1.5s cubic-bezier(0, 0, 0.5, 0.5) infinite alternate;
+}
+
+/* @keyframes float {
+  0%,
+  100% {
+    transform: translate(-40%, -15%) translateY(6px);
+  }
+  50% {
+    transform: translate(-40%, -15%) translateY(3px);
+  }
+} */
+
+@keyframes bounce {
+  to {
+    transform: translate(-40%, -5%) translateY(1px);
+  }
+}
+
+.msgWrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 250%);
+}
+.message {
+  color: var(--color-input);
+  font-size: 1.2rem;
+  text-align: center;
 }
