--- a/src/component/Main.module.css
+++ b/src/component/Main.module.css
@@ -1,44 +1,51 @@
-.main_wrapper {
-  height: 100vh;
-  width: 100vw;
-  margin: 0px;
-  padding: 0px;
-  background-color: var(--color-background);
+.mainWrapper {
+  position: relative;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  /* background: var(--color-background); */
 }
 
-.main_nav {
+.mainNav {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 10vw;
+  align-items: center;
+  padding: 10%;
   padding-left: 0vw;
   padding-right: 0vw;
 }
 
-.main_nav > header {
-  background: lightgrey;
+.mainNav > header {
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  color: floralwhite;
   text-align: center;
-  width: 25vw;
+  font-size: 1.4rem;
+  /* width: 25%; */
+  text-shadow: 1px 1px 10px var(--color-modal-shadow);
 }
 
-.main_con {
+.settingBtn {
+  padding: 0;
+  margin: 0;
+  margin-left: 30%;
+  background: transparent;
+  border: none;
+}
+
+.mainCon {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 13vh;
-  padding-top: 6vh;
-}
-
-.dummy {
-  visibility: hidden;
-}
-.dummy > img {
-  width: 50vw;
+  padding-bottom: 120%;
+  padding-top: 6%;
 }
 
 .carousel {
-  width: 100vw;
-  height: 40vh;
+  width: 100%;
+  height: 40%;
 
   display: flex;
   flex-direction: row;
@@ -52,8 +59,8 @@
 }
 
 .slide {
-  margin-left: 5vw;
-  margin-right: 5vw;
+  margin-left: 5%;
+  margin-right: 5%;
 
   width: 250px;
   height: 250px;
@@ -69,18 +76,30 @@
   height: 200px;
 }
 
-.main_btn_con {
+.mainBtnCon {
+  position: -webkit-sticky;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  height: 80px;
+  padding: 0;
+
+  box-shadow: 0px -1px 5px 1px grey;
+  background: var(--color-background2);
+
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-top: 0vh;
 }
 
-/* .main_btn_con > button {
-  width: 100px;
+.mainBtnCon > button {
+  /* width: 100px;
   height: 100px;
-  border-radius: 50%;
-} */
+  border-radius: 50%; */
+  background: transparent;
+  border-radius: 10px;
+  filter: drop-shadow(1px 1px 10px grey);
+}
 
 .static {
   /* background-color: transparent; */
