--- a/src/component/NickConfirmModal.module.css
+++ b/src/component/NickConfirmModal.module.css
@@ -1,9 +1,10 @@
 .background {
-  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+  /* background-color: rgba(0, 0, 0, 0.7); */
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -18,40 +19,48 @@
 .wrapper {
   color: white;
 
-  background-color: var(--color-modal);
-  position: absolute;
+  /* background-color: transparent; */
+  position: fixed;
+  padding: 2%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80vw;
-  height: 30vh;
-  overflow-y: auto;
+  width: 80%;
+  height: 30%;
 }
 
 .wrapper {
+  /* filter: blur(5px);s */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
+
+  border: 1px solid var(--color-modal-border);
+  box-shadow: 1px 1px 20px -5px var(--color-modal-shadow);
   border-radius: 10px;
   font-size: 1.3rem;
 }
 
-.renameInput {
+.input {
   color: var(--color-input);
   font-size: 1.3rem;
   text-align: center;
   border: none;
   border-bottom: 1px solid var(--color-input);
-  background-color: var(--color-modal);
+  background-color: transparent;
 }
-.renameInput:focus {
+.input:focus {
   outline: none;
   border: none;
   border-bottom: 1px solid var(--color-input);
   animation: blink 1s infinite;
 }
+.input::placeholder {
+  color: rgba(255, 255, 240, 0.3);
+}
+
 @keyframes blink {
   0%,
   100% {
