--- a/src/component/Typewriter.css
+++ b/src/component/Typewriter.css
@@ -1,12 +1,9 @@
 .Typewriter {
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   position: absolute;
   top: 40vh;
   text-align: center;
   color: white;
-  font-size: 1.5rem;
-  font-family: "Times New Roman", Times, serif;
+  font-size: 2rem;
   width: 100vw;
+  font-family: "Nanum Pen Script", cursive;
 }
