--- a/src/component/Main.module.css
+++ b/src/component/Main.module.css
@@ -1,4 +1,7 @@
 .mainWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   height: 100%;
   margin: 0;
@@ -11,9 +14,9 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding: 10%;
-  padding-left: 0vw;
-  padding-right: 0vw;
+  padding-bottom: 5%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .mainNav > header {
@@ -45,7 +48,7 @@
 
 .carousel {
   width: 100%;
-  height: 40%;
+  height: 400px;
 
   display: flex;
   flex-direction: row;
@@ -54,26 +57,35 @@
 
   background-color: transparent;
 
-  overflow-x: scroll;
+  overflow-x: auto;
   white-space: nowrap;
 }
 
 .slide {
+  position: relative;
+
   margin-left: 5%;
   margin-right: 5%;
 
   width: 250px;
-  height: 250px;
+  height: 350px;
 
-  background-color: white;
+  background: rgba(61, 61, 76, 0.8);
+  backdrop-filter: blur(10px);
 
-  border: 1px solid black;
+  /* border: 1px solid black; */
+  border-radius: 10px;
   text-align: center;
+  color: var(--color-input);
 }
 
 .slide > img {
+  border-radius: 10px;
+  /* width: 100%;
+  height: 100%; */
   width: 200px;
-  height: 200px;
+  height: auto;
+  margin: 20px;
 }
 
 .mainBtnCon {
