--- a/src/component/Modal.module.css
+++ b/src/component/Modal.module.css
@@ -10,8 +10,9 @@
   padding: 10%;
   color: white;
 
-  background-color: rgba(255, 255, 255, 0.1); /* 약간 투명한 배경색 추가 */
-  backdrop-filter: blur(10px);
+  background: var(--color-background2);
+  border: 1px solid var(--color-modal-border);
+  box-shadow: 1px 1px 20px -5px var(--color-modal-shadow);
 
   position: absolute;
   top: 50%;
@@ -36,9 +37,10 @@
 }
 
 .modalImg,
-.modalScript {
+.detailStory,
+.comment {
   margin-top: 15%;
-  margin-bottom: 13%;
+  margin-bottom: 15%;
 }
 .footer {
   animation: blink 0.9s infinite ease alternate;
@@ -55,8 +57,19 @@
 .modalImg {
 }
 
-.modalScript {
-  font-size: 1.3rem;
+.detailStory {
+  font-size: 1.1rem;
+}
+.comment {
+  font-size: 1.1rem;
+  border-bottom: 1px solid var(--color-input);
+}
+.label {
+  display: inline-block;
+  border: 1px solid var(--color-input);
+  border-radius: 10px;
+  padding: 3%;
+  margin: 5%;
 }
 
 /* .fade {
