--- a/src/component/NickConfirmModal.module.css
+++ b/src/component/NickConfirmModal.module.css
@@ -72,7 +72,12 @@
 }
 
 .toNextBtn {
+  font-family: "Jua", sans-serif;
+  font-style: normal;
+  padding: 2%;
   border-radius: 5px;
   font-size: 1.3rem;
-  border: none;
+  border: 1px solid var(--color-input);
+  color: var(--color-input);
+  background: transparent;
 }
