--- a/src/component/Input.module.css
+++ b/src/component/Input.module.css
@@ -48,7 +48,7 @@
   color: var(--color-input);
   font-size: 1.3rem;
 }
-.input:focus {
+/* .input:focus {
   outline: none;
   border: none;
   border-bottom: 1px solid var(--color-input);
@@ -62,4 +62,4 @@
   50% {
     border-bottom-color: var(--color-input);
   }
-}
+} */
