--- a/src/component/Main.module.css
+++ b/src/component/Main.module.css
@@ -1,9 +1,12 @@
 .mainWrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
+
   justify-content: center;
-  position: relative;
+
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   /* background: var(--color-background); */
@@ -14,7 +17,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding-bottom: 5%;
+  padding: 10%;
   padding-left: 0;
   padding-right: 0;
 }
@@ -47,8 +50,9 @@
 }
 
 .carousel {
-  width: 100%;
+  width: 90%;
   height: 400px;
+  border-radius: 80px;
 
   display: flex;
   flex-direction: row;
@@ -59,6 +63,9 @@
 
   overflow-x: auto;
   white-space: nowrap;
+}
+.carousel > :nth-child(1) {
+  margin-left: 10%;
 }
 
 .slide {
