--- a/src/component/Input.module.css
+++ b/src/component/Input.module.css
@@ -48,11 +48,11 @@
   color: var(--color-input);
   font-size: 1.3rem;
 }
-/* .input:focus {
+.input:focus {
   outline: none;
   border: none;
   border-bottom: 1px solid var(--color-input);
-  animation: blink 0.98s infinite;
+  /* animation: blink 0.98s infinite; */
 }
 @keyframes blink {
   0%,
@@ -62,4 +62,4 @@
   50% {
     border-bottom-color: var(--color-input);
   }
-} */
+}
