--- a/src/component/Statistic.module.css
+++ b/src/component/Statistic.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 75vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -9,6 +9,7 @@
 }
 .title {
   text-align: center;
+  margin-bottom: 13%;
 }
 
 .statisticWrapper {
@@ -24,6 +25,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  margin-left: 3%;
 }
 .chartCon {
   display: flex;
@@ -79,10 +81,15 @@
 } */
 
 .gptComment {
+  overflow: auto;
+  width: 70%;
+  height: 150px;
+
   border: 1px solid var(--color-input);
   border-radius: 10px;
   padding: 8%;
   margin: 5%;
+  margin-top: 15%;
   text-align: center;
   font-size: 1.1rem;
 
